Setup highlighted and selected colors for multi purpose table view cell

--- a/SocialMedia/Modules/PostDetail/PostDetailViewController.xib
+++ b/SocialMedia/Modules/PostDetail/PostDetailViewController.xib
@@ -11,6 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PostDetailViewController" customModule="SocialMedia" customModuleProvider="target">
             <connections>
+                <outlet property="tableView" destination="G1O-m8-iEt" id="w5I-zt-1fg"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -18,14 +19,29 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="G1O-m8-iEt">
+                    <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                </tableView>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
-            <color key="backgroundColor" systemColor="systemYellowColor"/>
-            <point key="canvasLocation" x="139" y="112"/>
+            <color key="backgroundColor" systemColor="systemGray5Color"/>
+            <constraints>
+                <constraint firstItem="G1O-m8-iEt" firstAttribute="bottom" secondItem="fnl-2z-Ty3" secondAttribute="bottom" id="CoA-er-Aky"/>
+                <constraint firstItem="G1O-m8-iEt" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="EY6-Fo-KVy"/>
+                <constraint firstItem="G1O-m8-iEt" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="NVq-1c-sen"/>
+                <constraint firstItem="G1O-m8-iEt" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="xcn-tJ-Xdu"/>
+            </constraints>
+            <point key="canvasLocation" x="137.68115942028987" y="111.83035714285714"/>
         </view>
     </objects>
     <resources>
-        <systemColor name="systemYellowColor">
-            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray5Color">
+            <color red="0.89803921568627454" green="0.89803921568627454" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
