--- a/SocialMedia/Common/TableViewCells/MultiPurposeTableViewCell.xib
+++ b/SocialMedia/Common/TableViewCells/MultiPurposeTableViewCell.xib
@@ -18,13 +18,13 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="CWF-d3-KIT">
-                        <rect key="frame" x="24" y="19.5" width="366" height="49"/>
+                        <rect key="frame" x="24" y="12" width="366" height="64"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XiG-4P-zLO" userLabel="ImageContainerView">
-                                <rect key="frame" x="0.0" y="0.0" width="24" height="49"/>
+                                <rect key="frame" x="0.0" y="0.0" width="24" height="64"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="apN-qJ-1U2">
-                                        <rect key="frame" x="0.0" y="12.5" width="24" height="24"/>
+                                        <rect key="frame" x="0.0" y="20" width="24" height="24"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="24" id="YhC-KA-zdq"/>
@@ -40,13 +40,13 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="j77-jV-eq3" userLabel="TextContainerView">
-                                <rect key="frame" x="32" y="0.0" width="310" height="49"/>
+                                <rect key="frame" x="32" y="0.0" width="310" height="64"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="Oic-cn-Qln">
-                                        <rect key="frame" x="0.0" y="0.0" width="310" height="49"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="310" height="64"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wSk-rv-Fr9">
-                                                <rect key="frame" x="0.0" y="0.0" width="310" height="17"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="310" height="22"/>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="14" id="mik-Ou-CCC"/>
@@ -56,7 +56,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bUI-Aa-hgC">
-                                                <rect key="frame" x="0.0" y="21" width="310" height="12"/>
+                                                <rect key="frame" x="0.0" y="26" width="310" height="16"/>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="10" id="y6c-Bf-c1o"/>
@@ -66,7 +66,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OFL-Xi-Led">
-                                                <rect key="frame" x="0.0" y="37" width="310" height="12"/>
+                                                <rect key="frame" x="0.0" y="46" width="310" height="18"/>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="10" id="tVk-PN-hnv"/>
@@ -88,10 +88,10 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="25T-pK-Yst" userLabel="DisclosureIndicatorContainerView">
-                                <rect key="frame" x="350" y="0.0" width="16" height="49"/>
+                                <rect key="frame" x="350" y="0.0" width="16" height="64"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Vdn-1T-qmb">
-                                        <rect key="frame" x="0.0" y="16.5" width="16" height="16"/>
+                                        <rect key="frame" x="0.0" y="24" width="16" height="16"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
@@ -113,9 +113,10 @@
                 </subviews>
                 <color key="backgroundColor" systemColor="systemGray6Color"/>
                 <constraints>
+                    <constraint firstAttribute="bottom" secondItem="CWF-d3-KIT" secondAttribute="bottom" constant="12" id="4LW-tj-9dx"/>
                     <constraint firstItem="CWF-d3-KIT" firstAttribute="leading" secondItem="Gmp-Ia-Zxe" secondAttribute="leading" constant="24" id="JMP-dY-R4f"/>
+                    <constraint firstItem="CWF-d3-KIT" firstAttribute="top" secondItem="Gmp-Ia-Zxe" secondAttribute="top" constant="12" id="JxV-zn-MQu"/>
                     <constraint firstAttribute="trailing" secondItem="CWF-d3-KIT" secondAttribute="trailing" constant="24" id="OcK-NC-6hq"/>
-                    <constraint firstItem="CWF-d3-KIT" firstAttribute="centerY" secondItem="Gmp-Ia-Zxe" secondAttribute="centerY" id="hQH-zE-n75"/>
                 </constraints>
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
