--- a/SocialMedia/Common/TableViewCells/MultiPurposeTableViewCell.xib
+++ b/SocialMedia/Common/TableViewCells/MultiPurposeTableViewCell.xib
@@ -10,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MultiPurposeTableViewCell" id="IK7-br-VtL" customClass="MultiPurposeTableViewCell" customModule="SocialMedia" customModuleProvider="target">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="MultiPurposeTableViewCell" id="IK7-br-VtL" customClass="MultiPurposeTableViewCell" customModule="SocialMedia" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="414" height="88"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="IK7-br-VtL" id="Gmp-Ia-Zxe">
